--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,4 +20,4 @@ jobs:
       run: go build -v .
 
     - name: Test
-      run: ginkgo -r --randomizeAllSpecs --randomizeSuites --failOnPending --cover --trace
+      run: go test -ginkgo.randomizeAllSpecs -ginkgo.trace
